// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandLineParameterBase allows an undocumented synonym 1`] = `
Array [
  "### --choice output: ###",
  "### --choice-with-default output: ###",
  "--choice-with-default",
  "default",
  "### --choice-list output: ###",
  "### --flag output: ###",
  "### --integer output: ###",
  "### --integer-with-default output: ###",
  "--integer-with-default",
  "123",
  "### --integer-required output: ###",
  "--integer-required",
  "6",
  "### --env-integer-required output: ###",
  "--env-integer-required",
  "123",
  "### --integer-list output: ###",
  "### --string output: ###",
  "### --string-with-default output: ###",
  "--string-with-default",
  "123",
  "### --string-with-undocumented-synonym output: ###",
  "--string-with-undocumented-synonym",
  "undocumented-value",
  "### --string-list output: ###",
]
`;

exports[`CommandLineParameterBase choice list raises an error if env var value is json containing non-scalars 1`] = `"The [{}] environment variable value looks like a JSON array but failed to parse: The [{}] environment variable value must be a JSON  array containing only strings, numbers, and booleans."`;

exports[`CommandLineParameterBase choice list raises an error if env var value is not a valid choice 1`] = `"Invalid value \\"oblong\\" for the environment variable ENV_COLOR.  Valid choices are: \\"purple\\", \\"yellow\\", \\"pizza\\""`;

exports[`CommandLineParameterBase parses an input with ALL parameters 1`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "A flag that affects all actions",
  "environmentVariable": undefined,
  "kind": 1,
  "longName": "--global-flag",
  "required": false,
  "shortName": "-g",
  "value": true,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 2`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "A choice",
  "environmentVariable": "ENV_CHOICE",
  "kind": -0,
  "longName": "--choice",
  "required": false,
  "shortName": "-c",
  "value": "two",
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 3`] = `
Object {
  "argumentName": undefined,
  "defaultValue": "default",
  "description": "A choice with a default. This description ends with a \\"quoted word\\"",
  "environmentVariable": "ENV_CHOICE2",
  "kind": -0,
  "longName": "--choice-with-default",
  "required": false,
  "shortName": undefined,
  "value": "default",
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 4`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "This parameter may be specified multiple times to make a list of choices",
  "environmentVariable": "ENV_CHOICE_LIST",
  "kind": 5,
  "longName": "--choice-list",
  "required": false,
  "shortName": "-C",
  "value": undefined,
  "values": Array [
    "red",
    "blue",
  ],
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 5`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "A flag",
  "environmentVariable": "ENV_FLAG",
  "kind": 1,
  "longName": "--flag",
  "required": false,
  "shortName": "-f",
  "value": true,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 6`] = `
Object {
  "argumentName": "NUMBER",
  "defaultValue": undefined,
  "description": "An integer",
  "environmentVariable": "ENV_INTEGER",
  "kind": 2,
  "longName": "--integer",
  "required": false,
  "shortName": "-i",
  "value": 123,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 7`] = `
Object {
  "argumentName": "NUMBER",
  "defaultValue": 123,
  "description": "An integer with a default",
  "environmentVariable": "ENV_INTEGER2",
  "kind": 2,
  "longName": "--integer-with-default",
  "required": false,
  "shortName": undefined,
  "value": 123,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 8`] = `
Object {
  "argumentName": "NUMBER",
  "defaultValue": undefined,
  "description": "An integer",
  "environmentVariable": undefined,
  "kind": 2,
  "longName": "--integer-required",
  "required": true,
  "shortName": undefined,
  "value": 321,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 9`] = `
Object {
  "argumentName": "LIST_ITEM",
  "defaultValue": undefined,
  "description": "This parameter may be specified multiple times to make a list of integers",
  "environmentVariable": "ENV_INTEGER_LIST",
  "kind": 6,
  "longName": "--integer-list",
  "required": false,
  "shortName": "-I",
  "value": undefined,
  "values": Array [
    37,
    -404,
  ],
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 10`] = `
Object {
  "argumentName": "TEXT",
  "defaultValue": undefined,
  "description": "A string",
  "environmentVariable": "ENV_STRING",
  "kind": 3,
  "longName": "--string",
  "required": false,
  "shortName": "-s",
  "value": "hello",
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 11`] = `
Object {
  "argumentName": "TEXT",
  "defaultValue": "123",
  "description": "A string with a default",
  "environmentVariable": "ENV_STRING2",
  "kind": 3,
  "longName": "--string-with-default",
  "required": false,
  "shortName": undefined,
  "value": "123",
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 12`] = `
Object {
  "argumentName": "LIST_ITEM",
  "defaultValue": undefined,
  "description": "This parameter may be specified multiple times to make a list of strings",
  "environmentVariable": "ENV_STRING_LIST",
  "kind": 4,
  "longName": "--string-list",
  "required": false,
  "shortName": "-l",
  "value": undefined,
  "values": Array [
    "first",
    "second",
  ],
}
`;

exports[`CommandLineParameterBase parses an input with ALL parameters 13`] = `
Array [
  "### --choice output: ###",
  "--choice",
  "two",
  "### --choice-with-default output: ###",
  "--choice-with-default",
  "default",
  "### --choice-list output: ###",
  "--choice-list",
  "red",
  "--choice-list",
  "blue",
  "### --flag output: ###",
  "--flag",
  "### --integer output: ###",
  "--integer",
  "123",
  "### --integer-with-default output: ###",
  "--integer-with-default",
  "123",
  "### --integer-required output: ###",
  "--integer-required",
  "321",
  "### --env-integer-required output: ###",
  "--env-integer-required",
  "123",
  "### --integer-list output: ###",
  "--integer-list",
  "37",
  "--integer-list",
  "-404",
  "### --string output: ###",
  "--string",
  "hello",
  "### --string-with-default output: ###",
  "--string-with-default",
  "123",
  "### --string-with-undocumented-synonym output: ###",
  "### --string-list output: ###",
  "--string-list",
  "first",
  "--string-list",
  "second",
]
`;

exports[`CommandLineParameterBase parses an input with NO parameters 1`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "A flag that affects all actions",
  "environmentVariable": undefined,
  "kind": 1,
  "longName": "--global-flag",
  "required": false,
  "shortName": "-g",
  "value": false,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 2`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "A choice",
  "environmentVariable": "ENV_CHOICE",
  "kind": -0,
  "longName": "--choice",
  "required": false,
  "shortName": "-c",
  "value": undefined,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 3`] = `
Object {
  "argumentName": undefined,
  "defaultValue": "default",
  "description": "A choice with a default. This description ends with a \\"quoted word\\"",
  "environmentVariable": "ENV_CHOICE2",
  "kind": -0,
  "longName": "--choice-with-default",
  "required": false,
  "shortName": undefined,
  "value": "default",
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 4`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "This parameter may be specified multiple times to make a list of choices",
  "environmentVariable": "ENV_CHOICE_LIST",
  "kind": 5,
  "longName": "--choice-list",
  "required": false,
  "shortName": "-C",
  "value": undefined,
  "values": Array [],
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 5`] = `
Object {
  "argumentName": undefined,
  "defaultValue": undefined,
  "description": "A flag",
  "environmentVariable": "ENV_FLAG",
  "kind": 1,
  "longName": "--flag",
  "required": false,
  "shortName": "-f",
  "value": false,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 6`] = `
Object {
  "argumentName": "NUMBER",
  "defaultValue": undefined,
  "description": "An integer",
  "environmentVariable": "ENV_INTEGER",
  "kind": 2,
  "longName": "--integer",
  "required": false,
  "shortName": "-i",
  "value": undefined,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 7`] = `
Object {
  "argumentName": "NUMBER",
  "defaultValue": 123,
  "description": "An integer with a default",
  "environmentVariable": "ENV_INTEGER2",
  "kind": 2,
  "longName": "--integer-with-default",
  "required": false,
  "shortName": undefined,
  "value": 123,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 8`] = `
Object {
  "argumentName": "NUMBER",
  "defaultValue": undefined,
  "description": "An integer",
  "environmentVariable": undefined,
  "kind": 2,
  "longName": "--integer-required",
  "required": true,
  "shortName": undefined,
  "value": 123,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 9`] = `
Object {
  "argumentName": "LIST_ITEM",
  "defaultValue": undefined,
  "description": "This parameter may be specified multiple times to make a list of integers",
  "environmentVariable": "ENV_INTEGER_LIST",
  "kind": 6,
  "longName": "--integer-list",
  "required": false,
  "shortName": "-I",
  "value": undefined,
  "values": Array [],
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 10`] = `
Object {
  "argumentName": "TEXT",
  "defaultValue": undefined,
  "description": "A string",
  "environmentVariable": "ENV_STRING",
  "kind": 3,
  "longName": "--string",
  "required": false,
  "shortName": "-s",
  "value": undefined,
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 11`] = `
Object {
  "argumentName": "TEXT",
  "defaultValue": "123",
  "description": "A string with a default",
  "environmentVariable": "ENV_STRING2",
  "kind": 3,
  "longName": "--string-with-default",
  "required": false,
  "shortName": undefined,
  "value": "123",
  "values": undefined,
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 12`] = `
Object {
  "argumentName": "LIST_ITEM",
  "defaultValue": undefined,
  "description": "This parameter may be specified multiple times to make a list of strings",
  "environmentVariable": "ENV_STRING_LIST",
  "kind": 4,
  "longName": "--string-list",
  "required": false,
  "shortName": "-l",
  "value": undefined,
  "values": Array [],
}
`;

exports[`CommandLineParameterBase parses an input with NO parameters 13`] = `
Array [
  "### --choice output: ###",
  "### --choice-with-default output: ###",
  "--choice-with-default",
  "default",
  "### --choice-list output: ###",
  "### --flag output: ###",
  "### --integer output: ###",
  "### --integer-with-default output: ###",
  "--integer-with-default",
  "123",
  "### --integer-required output: ###",
  "--integer-required",
  "123",
  "### --env-integer-required output: ###",
  "--env-integer-required",
  "321",
  "### --integer-list output: ###",
  "### --string output: ###",
  "### --string-with-default output: ###",
  "--string-with-default",
  "123",
  "### --string-with-undocumented-synonym output: ###",
  "### --string-list output: ###",
]
`;

exports[`CommandLineParameterBase parses each parameter from an environment variable 1`] = `
Array [
  "### --choice output: ###",
  "--choice",
  "one",
  "### --choice-with-default output: ###",
  "--choice-with-default",
  "two",
  "### --choice-list output: ###",
  "--choice-list",
  "red",
  "--choice-list",
  "green",
  "### --flag output: ###",
  "--flag",
  "### --integer output: ###",
  "--integer",
  "111",
  "### --integer-with-default output: ###",
  "--integer-with-default",
  "222",
  "### --integer-required output: ###",
  "--integer-required",
  "1",
  "### --env-integer-required output: ###",
  "--env-integer-required",
  "333",
  "### --integer-list output: ###",
  "--integer-list",
  "1",
  "--integer-list",
  "2",
  "--integer-list",
  "3",
  "### --string output: ###",
  "--string",
  "Hello, world!",
  "### --string-with-default output: ###",
  "--string-with-default",
  "Hello, world!",
  "### --string-with-undocumented-synonym output: ###",
  "### --string-list output: ###",
  "--string-list",
  "simple text",
  "### --json-string-list output: ###",
  "--json-string-list",
  "1",
  "--json-string-list",
  "true",
  "--json-string-list",
  "Hello, world!",
]
`;

exports[`CommandLineParameterBase prints the same usage if a required parameter backed by an env variable is not provided as when a different required parameter is missing: Usage 1`] = `
"usage: example do:the-job [-h] [-c {one,two,three,default}]
                          [--choice-with-default {one,two,three,default}]
                          [-C {red,green,blue}] [-f] [-i NUMBER]
                          [--integer-with-default NUMBER] --integer-required
                          NUMBER --env-integer-required NUMBER [-I LIST_ITEM]
                          [-s TEXT] [--string-with-default TEXT]
                          [--string-with-undocumented-synonym TEXT]
                          [-l LIST_ITEM]
                          
"
`;

exports[`CommandLineParameterBase raises an error if a required parameter backed by an env variable is not provided: Error 1`] = `
[Error: example do:the-job: error: Argument "--env-integer-required" is required
]
`;

exports[`CommandLineParameterBase raises an error if a required parameter backed by an env variable is not provided: Usage 1`] = `
"usage: example do:the-job [-h] [-c {one,two,three,default}]
                          [--choice-with-default {one,two,three,default}]
                          [-C {red,green,blue}] [-f] [-i NUMBER]
                          [--integer-with-default NUMBER] --integer-required
                          NUMBER --env-integer-required NUMBER [-I LIST_ITEM]
                          [-s TEXT] [--string-with-default TEXT]
                          [--string-with-undocumented-synonym TEXT]
                          [-l LIST_ITEM]
                          
"
`;

exports[`CommandLineParameterBase renders help text: do:the-job 1`] = `
"usage: example do:the-job [-h] [-c {one,two,three,default}]
                          [--choice-with-default {one,two,three,default}]
                          [-C {red,green,blue}] [-f] [-i NUMBER]
                          [--integer-with-default NUMBER] --integer-required
                          NUMBER --env-integer-required NUMBER [-I LIST_ITEM]
                          [-s TEXT] [--string-with-default TEXT]
                          [--string-with-undocumented-synonym TEXT]
                          [-l LIST_ITEM]
                          

a longer description

Optional arguments:
  -h, --help            Show this help message and exit.
  -c {one,two,three,default}, --choice {one,two,three,default}
                        A choice. This parameter may alternatively be 
                        specified via the ENV_CHOICE environment variable.
  --choice-with-default {one,two,three,default}
                        A choice with a default. This description ends with a 
                        \\"quoted word\\". This parameter may alternatively be 
                        specified via the ENV_CHOICE2 environment variable. 
                        The default value is \\"default\\".
  -C {red,green,blue}, --choice-list {red,green,blue}
                        This parameter may be specified multiple times to 
                        make a list of choices. This parameter may 
                        alternatively be specified via the ENV_CHOICE_LIST 
                        environment variable.
  -f, --flag            A flag. This parameter may alternatively be specified 
                        via the ENV_FLAG environment variable.
  -i NUMBER, --integer NUMBER
                        An integer. This parameter may alternatively be 
                        specified via the ENV_INTEGER environment variable.
  --integer-with-default NUMBER
                        An integer with a default. This parameter may 
                        alternatively be specified via the ENV_INTEGER2 
                        environment variable. The default value is 123.
  --integer-required NUMBER
                        An integer
  --env-integer-required NUMBER
                        An integer. This parameter may alternatively be 
                        specified via the ENV_INTEGER_REQUIRED environment 
                        variable.
  -I LIST_ITEM, --integer-list LIST_ITEM
                        This parameter may be specified multiple times to 
                        make a list of integers. This parameter may 
                        alternatively be specified via the ENV_INTEGER_LIST 
                        environment variable.
  -s TEXT, --string TEXT
                        A string. This parameter may alternatively be 
                        specified via the ENV_STRING environment variable.
  --string-with-default TEXT
                        A string with a default. This parameter may 
                        alternatively be specified via the ENV_STRING2 
                        environment variable. The default value is \\"123\\".
  --string-with-undocumented-synonym TEXT
                        A string with an undocumented synonym
  -l LIST_ITEM, --string-list LIST_ITEM
                        This parameter may be specified multiple times to 
                        make a list of strings. This parameter may 
                        alternatively be specified via the ENV_STRING_LIST 
                        environment variable.
"
`;

exports[`CommandLineParameterBase renders help text: global help 1`] = `
"usage: example [-h] [-g] <command> ...

An example project

Positional arguments:
  <command>
    do:the-job       does the job

Optional arguments:
  -h, --help         Show this help message and exit.
  -g, --global-flag  A flag that affects all actions

[bold]For detailed help about a specific command, use: example <command> -h[normal]
"
`;
